chef confirmation event buttons changing

--- a/app/assets/stylesheets/chefs.scss
+++ b/app/assets/stylesheets/chefs.scss
@@ -10,10 +10,9 @@
   padding: 20px;
   background-color: gainsboro;
   margin: 2% 0.5% 2% 0.5%;
-}
-
-.usersViewIcon h2 {
-    text-align: center
+  h2 {
+      text-align: center
+  }
 }
 
 .userInfo {
@@ -40,6 +39,6 @@
   display: inline-block;
 }
 
-a{
+a {
   font-size: 20px;
 }
