--- a/app/views/reviews/review.html.erb
+++ b/app/views/reviews/review.html.erb
@@ -5,6 +5,6 @@
   <br>
   <div class="light-orange">
   Review by: <%= link_to @review.reviewer.first_name, @review.reviewer %>
-  <%= link_to 'Destroy', user_review_path(@review.user, @review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+  <%= link_to 'Delete', user_review_path(@review.user, @review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
   </div>
 </div>
