--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -30,7 +30,7 @@
 </div>
 <div class="field" id="chefField">
   <%= f.label :chef_id %>
-  <%= f.select :chef_id, (User.where(:chef => true)).pluck(:first_name,:id), {:prompt => 'Choose Chef'}, :required => true %>
+  <%= f.select :chef_id, (User.where(:chef => true)).pluck(:first_name,:id), :prompt => 'Choose Chef', :required => true, :selected => @menu.user_id %>
 </div>
 <div class="field" id="menuField">
   <%= f.label :menu_availables %>
@@ -38,9 +38,9 @@
   <% if @event.persisted? %>
   <%= f.select :menu_id, @event.chef.menus.pluck(:title, :id), :include_blank => true %>
   <% else %>
-  <%= f.select :menu_id, Menu.pluck(:title,:id), :include_blank => true, :required => true %>
+  <%= f.select :menu_id, Menu.pluck(:title,:id), :include_blank => true, :required => true, :selected => params[:menu_id] %>
   <% end %>
-  
+
 </div>
 <div class="chefMenuField">
   <p>
