--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -27,7 +27,7 @@
 }
 
 .events{
-  background-color: rgba(46,42,42,0.05);
+  background-color: whitesmoke;
   padding: 40px;
   margin: 0 auto;
   border-radius: 5%;
