--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -53,7 +53,7 @@
 
 
 .about {
-  background-color: gainsboro;
+  background-color: whitesmoke;
   padding: 5% ;
   color: gray;
   text-align: center;
@@ -76,7 +76,7 @@
 
 .chefs {
   min-height: 60px;
-  background: gainsboro;
+  background: whitesmoke;
 }
 
 .footer{
