--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,88 +1,85 @@
-<div class="main cf">
+<br><br>
   <p id="notice"><%= notice %></p>
+
   <% if @current_user == @user %>
-  <h1>Hello <%= @user.first_name %></h1>
+    <h1>Hello <%= @user.first_name %></h1>
+  <% elsif @user.chef?%>
+    <h1><%= @user.first_name %> <%= @user.last_name %></h1>
   <% end %>
-  <div class="row">
-    <div class="col-lg-2 col-md-1 cold-sm-0"></div>
-    <div class="usersViewIcon col col-lg-3 col-md-3 cold-sm-12 cf">
-      <h2>
-        <%= @user.first_name %> <br> <%= @user.last_name %>
-      </h2>
-      <%= image_tag @user.image, :class => "thumb cf"%>
-    </div>
-    <div class="userInfo col col-lg-6 col-md-6 col-sm-12 cf">
-      <h2>Contact <%= @user.first_name %></h2>
-        <p>
-          <strong>Email:</strong>
-          <%= @user.email %>
-        </p>
-      <% #only show the admin status if the current user is an admin %>
+
+<div class="chefBio">
+    <% if @user.chef? %>
+    <h3>" <%= @user.bio %> "</h3>
+  <% end %>
+</div>
+
+<br>
+
+<div class="mainUsers">
+
+<div class="userProfilePic">
+  <%= image_tag @user.image, :class => "profilePic"%>
+</div>
+
+<div class="usersInfo">
+
+<% #Title %>
+    <% if @user.chef? %>
+      <h2>Chef <%= @user.last_name %></h2>
+    <% else %>
+      <h2>Host <%= @user.last_name %></h2>
+    <% end %>
+
+<% #Email %>
+    <p> <%= @user.email %></p>
+
+<% #only show the admin status if the current user is an admin %>
+    <% if @current_user.present? %>
+      <% if @current_user.admin? %>
+        <% if @user.admin? %>
+        <p><%= @user.first_name %> is also an admin</p>
+          <% end %>
+        <% end %>
+      <% end %>
+
+<% #only show the phone number if @user is a chef or current user is admin %>
+    <% if @user.chef? || @current_user.admin? %>
+      <p><strong>Phone:</strong><%= @user.phone %></p>
+    <% end %>
+
+<% #show host or chef depending on @user.chef status %>
+      <% if @user.chef? %>
+        <p> <strong>User type: </strong> Chef </p>
+      <% elsif !@user.chef? %>
+        <p><strong>User type: </strong> Host </p>
+      <% end %>
+
+<% #only show the chef bio, rate, and menus if they are a chef %>
+      <% if @user.chef? %>
+        <p><strong>Rate:</strong><%= number_to_currency(@user.rate) %> per people</p>
+        <strong><%= link_to "Menus", menus_path %></strong>
+        <% @user.menus.each do |menu| %>
+          <li><%= link_to menu.title, menu %></li>
+        <% end %>
+      <% end %>
+
+<% #Add Menu Button %>
+<div class="return">
+      <% if @user === @current_user || @current_user.admin? %>
+        <%= link_to 'Add Menu', new_menu_path %> |
+      <% end %>
       <% if @current_user.present? %>
-        <% if @current_user.admin? %>
-          <% if @user.admin? %>
-          <p>
-            <strong>Admin: </strong><%= @user.first_name %> is also an admin
-            <%= @user.admin %>
-          </p>
-            <% end %>
-          <p>
-            <strong>Admin: </strong> <%= @user.first_name %> is not an admin
-          </p>
-          <% end %>
+  <% #only show the edit button if the current user is @user or admin %>
+        <% if @current_user.admin? || @current_user.id === @user.id %>
+          <%= link_to 'Edit Profile', edit_user_path(@user) %>
         <% end %>
-        <% #only show the phone number if @user is a chef or current user is admin %>
-        <% if @user.chef? || @current_user.admin? %>
-          <p>
-            <strong>Phone:</strong>
-            <%= @user.phone %>
-          </p>
-        <% end %>
-        <% #show host or chef depending on @user.chef status %>
-        <% if @user.chef? %>
-          <p>
-            <strong>User type: </strong>
-            Chef
-          </p>
-        <% elsif !@user.chef? %>
-          <p>
-            <strong>User type: </strong>
-            Host
-          </p>
-        <% end %>
-        <% #only show the chef bio, rate, and menus if they are a chef %>
-        <% if @user.chef? %>
-          <p>
-            <strong>Bio:</strong>
-            <%= @user.bio %>
-          </p>
-          <p>
-            <strong>Rate:</strong>
-            <%= @user.rate %> $ per hour
-          </p>
-          <strong>Menus:</strong>
-          <% @user.menus.each do |menu| %>
-            <li><%= link_to menu.title, menu %></li>
-          <% end %>
-          <% if @user === @current_user || @current_user.admin? %>
-            <%= link_to 'Add Menu', new_menu_path %>
-          <% end %>
-        <% end %>
-        <br>
-          <div class="return">
-          <% if @current_user.present? %>
-            <% #only show the edit button if the current user is @user or admin %>
-            <% if @current_user.admin? || @current_user.id === @user.id %>
-              <%= link_to 'Edit', edit_user_path(@user) %> |
-            <% end %>
-          <% end %>
-            <%= link_to 'Back', users_path %>
-          </div>
-        </div>
+      <% end %>
+    </div>
   </div>
-  <div class="row">
-    <div class="col-lg-2 col-md-2"></div>
-    <div class="reviewsContainer row col-lg-8 col-md-8 cold-sm-12">
+</div>
+
+<div class="reviews">
+    <div class="reviewsContainer">
       <h2><%= @user.first_name %>'s Reviews</h2>
       <h4>Create a new review for <%= @user.first_name %> </h4>
       <div class="chefReviews">
@@ -102,7 +99,13 @@
           </fieldset>
         <% end %>
       </div>
-      <h2 id="prevReviews">Previous Reviews</h2>
+    </div>
+
+
+      <div class="showReviews">
+        <h2>Previous Reviews</h2>
+        <div class="overflowScrool">
+          <h2 id="prevReviews"></h2>
       <% @user.reviews.reverse.each do |review| %>
         <div class="individual_reviews">
           <span class="rating"><%= review.rating %> / 10 :</span>
