gonna start crying soon

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -9,6 +9,7 @@
   <div id="messages" class="col-lg-8 col-sm-12">
     <div id="conversations"></div>
     <div id="messages-display"></div>
+    <div id="create-message-box"></div>
   </div>
 
 </div>
