--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,6 +8,19 @@
 //  background: white;
 // }
 
+.titlePage h1{
+  font-size: 60px;
+  color: #beeeef;
+  text-shadow: 2px 2px 10px black;
+}
+
+.titlePage h2{
+  font-size: 40px;
+  color: #beeeef;
+  text-shadow: 2px 2px 10px black;
+  text-align: center;
+}
+
 .logo{
   width: 80px;
   margin: 0 0 16px 37%;
@@ -102,9 +115,9 @@
  position: relative;
  background-position: center;
  padding-top: 10%;
- padding-bottom: 50%;
+ padding-bottom: 25%;
  margin: 0 auto;
- opacity: 0.6;
+ opacity: 0.8;
 }
 
 .col-lg-12, .col-md-10 {
