--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,12 @@
 <div class="homePage">
 
-  <div class="background"></div>
+  <div class="background">
+    <div class="titlePage">
+      <h1>Cookr</h1>
+      <h2>Book a Chef to cook for you and your friends!</h2>
+
+  </div>
+</div>
 
   <div class="about">
     <div class="row">
