changing Event Confirmation

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -169,3 +169,13 @@ color: black;
 .pages_thumbDiv:hover img{
   opacity: 0.4;
 }
+
+
+.profileUS{
+  width: 100px;
+  border-radius: 50%;
+}
+
+.us{
+  display: inline-block;
+}
