--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,9 +1,6 @@
-
 <div class="main">
-
-<h1>New Event</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', events_path %>
+  <div class="newEvent">
+    <h1>New Event</h1>
+    <%= render 'form' %>
+  </div>
 </div>
