--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -16,53 +16,57 @@
   <%= f.label :description %>
   <%= f.text_field :description, :required => true%>
 </div>
+
 <div class="field">
   <%= f.label :time %>
   <%= f.datetime_select :time, :required => true %>
 </div>
+
 <div class="field">
   <%= f.label :suburb %>
   <%= f.text_field :suburb, :required => true %>
 </div>
+
 <div class="field">
   <%= f.label :address %>
   <%= f.text_field :address, :required => true %>
 </div>
+
 <div class="field" id="chefField">
   <%= f.label :chef_id %>
   <%= f.select :chef_id, (User.where(:chef => true)).pluck(:first_name,:id), {:prompt => 'Choose Chef'}, :required => true %>
 </div>
+
 <div class="field" id="menuField">
   <%= f.label :menu_availables %>
-
   <% if @event.persisted? %>
   <%= f.select :menu_id, @event.chef.menus.pluck(:title, :id), :include_blank => true %>
   <% else %>
   <%= f.select :menu_id, Menu.pluck(:title,:id), :include_blank => true, :required => true %>
   <% end %>
-  
 </div>
+
 <div class="chefMenuField">
-  <p>
-    This chef has no menus
-  </p>
+  <p>This chef has no menus!</p>
 </div>
 
 <div class="field">
   <%= f.label :guests %>
   <%= f.number_field :guests, :required => true%>
 </div>
+
 <div class="field" id="chefConfirm">
   <%= f.label :confirm %>
   <%= f.check_box :confirm %>
 </div>
+
 <div class="field" id="priceField">
   <%= f.label :total_price %>
   <%= f.text_field :price, :readonly => true, :required => true %>
 </div>
+
 <div id="createEventButton" class="actions">
   <%= f.submit %>
 </div>
-
 
 <% end %>
