added icons to home page

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -53,11 +53,12 @@
 
 
 .about {
-  background-color: whitesmoke;
+  background-color: #222222;
   padding: 5% ;
-  color: gray;
+  color: #363636;
   text-align: center;
 }
+
 
 
 // .menus {
