--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -39,13 +39,13 @@
   margin-bottom: 1em;
 }
 
-.chat-head {
+.chat-head, .new-message {
   display: inline-block;
   background-color: gainsboro;
   text-align: center;
   border: 1px solid salmon;
 }
 
-.chat-head:hover {
+.chat-head, .new-message:hover {
   cursor: pointer;
 }
