--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -82,8 +82,10 @@
 </div>
 
 
-
+<% if @current_user.present? %>
 <div class="reviews">
+  <% if !(@current_user.present? && (@user === @current_user || @current_user.admin?)) %>
+
     <div class="reviewsContainer">
 
       <h2><%= @user.first_name %>'s Reviews</h2>
@@ -107,7 +109,7 @@
         <% end %>
       </div>
     </div>
-
+<% end %>
 
       <div class="showReviews">
         <h2>Previous Reviews</h2>
@@ -120,11 +122,14 @@
           <br>
           <br>
           <div class="light-orange">
-          Review by: <%= link_to review.reviewer.first_name, review.reviewer %> ||
-          <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+          Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
+          <% if @current_user.id === review.reviewer.id %>
+            || <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+          <% end %>
           </div>
         </div>
       <% end %>
     </div>
   </div>
 </div>
+<% end %>
