--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -35,7 +35,7 @@
       <% end %>
       <% if @current_user.present? && @current_user.id != @menu.user.id %>
         <hr>
-        <%= link_to ('Book this Menu'), new_event_path({:chef_id => @menu.user}), :class => 'linkButton' %>
+        <%= link_to 'Book this Menu', new_event_path(:menu_id => @menu.id), :class => 'linkButton'  %>
       <% elsif @current_user.present? === false %>
         <hr>
         <%= link_to ('Login to Book it'), new_user_path, :class => 'linkButton' %>
