added reviews on chef index and adjusted css is sin signup form

--- a/app/views/chefs/display.html.erb
+++ b/app/views/chefs/display.html.erb
@@ -4,7 +4,8 @@
   <div class="displayChefs">
       <div class="thumb">
       <%=link_to (image_tag user.image), user %>
-      <h2><%= link_to (user.first_name), user%>
+      <h2><%= link_to (user.name), user%></h2>
+      <%= user.average_rating %>
     </div>
   </div>
 
