--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,10 +33,10 @@
 <% #Email %>
 
 <% if @user.chef? %>
-  <% if @user.average_rating.nil? %>
-    <h4>No reviews yet</h4>
-  <% else %>
+  <% if @user.average_rating.is_a? Numeric  %>
     <h4>Rating:  <%= @user.average_rating %> / 10 </h4>
+  <% else %>
+    <h4><%=@user.average_rating%></h4>
   <% end %>
 <% end %>
 
@@ -92,7 +92,7 @@
 
 <div class="reviews">
     <div class="reviewsContainer">
-
+    <% if @current_user != @user %>
       <h2><%= @user.first_name %>'s Reviews</h2>
       <h4>Create a new review for <%= @user.first_name %> </h4>
       <div class="chefReviews">
@@ -107,31 +107,39 @@
             <h4><%= f.label :comments %></h4>
             <%= f.text_area :review, size: "60x12" %>
           </fieldset>
-
           <fieldset id="submitReview">
             <%= f.submit %>
           </fieldset>
         <% end %>
       </div>
+    <% end %>
     </div>
 
 
       <div class="showReviews">
-        <h2>Previous Reviews</h2>
-        <div class="overflowScrool">
-          <h2 id="prevReviews"></h2>
-      <% @user.reviews.reverse.each do |review| %>
-        <div class="individual_reviews">
-          <span class="rating"><%= review.rating %> / 10 :</span>
-          <span class="review_comments"><%= review.review %></span>
-          <br>
-          <br>
-          <div class="light-orange">
-          Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
-          <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
-          </div>
+        <% if @current_user == @user %>
+          <h2>Your Previous Reviews</h2>
+        <% else %>
+          <h2><%= @user.first_name %>'s Reviews</h2>
+        <% end %>
+        <% if !@user.reviews.present? %>
+            <h4>Currently No reviews</h4>
+        <% else %>
+          <div class="overflowScrool">
+            <h2 id="prevReviews"></h2>
+            <% @user.reviews.reverse.each do |review| %>
+              <div class="individual_reviews">
+                <span class="rating"><%= review.rating %> / 10 :</span>
+                <span class="review_comments"><%= review.review %></span>
+                <br>
+                <br>
+                <div class="light-orange">
+                  Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
+                  <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+                </div>
+              </div>
+            <% end %>
         </div>
       <% end %>
     </div>
-  </div>
 </div>
