--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -50,6 +50,10 @@
   margin: 1em auto;
 }
 
+.userSelect {
+  width: 40%;
+}
+
 .chat-head {
   display: inline-block;
   background-color: gainsboro;
