--- a/app/assets/stylesheets/menus.scss
+++ b/app/assets/stylesheets/menus.scss
@@ -16,7 +16,7 @@
 .thumb img{
   width: 150px;
   height: 150px;
-  border: 4px solid #BEEEEF;
+  border: 2px solid black;
   border-radius: 5%;
 }
 
