--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,13 +10,17 @@
 
 .titlePage h1{
   font-size: 60px;
-  color: #beeeef;
+  color: white;
   text-shadow: 2px 2px 10px black;
+}
+
+.about h3{
+  color: white;
 }
 
 .titlePage h2{
   font-size: 40px;
-  color: #beeeef;
+  color: white;
   text-shadow: 2px 2px 10px black;
   text-align: center;
 }
