--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -3,6 +3,16 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.newEvent {
+  width: 40%;
+  margin-left: 38%;
+  text-align: left;
+
+  h1 {
+    text-align: left;
+    color: #83BFC0;
+  }
+}
 
 
 .chefMenuField{
@@ -30,7 +40,7 @@
   background-color: whitesmoke;
   padding: 40px;
   margin: 0 auto;
-  border-radius: 5%;
+  border-radius: 5px;
   box-shadow: 3px 5px 10px grey;
   min-width: 300px;
   max-width: 50%;
