--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -8,6 +8,8 @@
 //  background: white;
 // }
 
+
+
 .titlePage h1{
   font-size: 60px;
   color: white;
@@ -98,7 +100,7 @@
 }
 
 .footer{
-  background-color: black;
+  background-color: #222222;
   padding: 5%;
 }
 
