--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -9,6 +9,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 13px;
   line-height: 18px;
+  background-color: whitesmoke;
 }
 
 p, ol, ul, td, a {
@@ -59,6 +60,7 @@ nav a{
 .navbar-nav {
   margin-left: 5%;
   margin-top: 14px;
+  color: #222222;
 }
 
 div {
@@ -108,4 +110,5 @@ div {
   padding-bottom: 60px;
   margin: 0 auto;
   text-align: center;
+  background-color: whitesmoke;
 }
