--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -32,6 +32,10 @@ tr {
   margin: 0 auto;
   font-style: italic;
   text-align: center;
+  background-color: white;
+  max-width: 100%;
+  margin-top: 10px;
+  padding: 30px;
 }
 
 .usersInfo{
