heroku not working

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -110,5 +110,5 @@ div {
   padding-bottom: 60px;
   margin: 0 auto;
   background-color: whitesmoke;
-  text-align: left;
+  text-align: center;
 }
