--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,6 @@
+
 <br><br>
   <p id="notice"><%= notice %></p>
-
-  <div class="chefBio">
 
   <% if @current_user == @user %>
     <h1>Hello <%= @user.first_name %></h1>
@@ -9,6 +8,7 @@
     <h1><%= @user.first_name %> <%= @user.last_name %></h1>
   <% end %>
 
+<div class="chefBio">
     <% if @user.chef? %>
     <h3>" <%= @user.bio %> "</h3>
   <% end %>
@@ -76,9 +76,9 @@
 
 <% #Add Menu Button %>
 <div class="return">
-  <% if @current_user.present? && (@current_user.admin? || @current_user.id === @user.id) %>
-    <%= link_to 'Add Menu', new_menu_path %> |
-  <% end %>
+      <% if @current_user.present? && (@user.id == @current_user.id || @current_user.admin?) %>
+        <%= link_to 'Add Menu', new_menu_path %> |
+      <% end %>
       <% if @current_user.present? %>
   <% #only show the edit button if the current user is @user or admin %>
         <% if @current_user.admin? || @current_user.id === @user.id %>
@@ -93,26 +93,28 @@
 
 <div class="reviews">
     <div class="reviewsContainer">
-    <% if @current_user != @user %>
-      <h2><%= @user.first_name %>'s Reviews</h2>
-      <h4>Create a new review for <%= @user.first_name %> </h4>
-      <div class="chefReviews">
-        <%= form_for ([@user, Review.new]), remote: true, html: {multipart: true} do |f| %>
-        <div><strong>Ratings from 1 - 10:</strong>
-          <br> 1 = Bad Cooking, 10 = Masterchef!!</div>
-          <fieldset class="label reviewRating">
-            <h4><%= f.label :rating %> </h4>
-            <%= f.number_field :rating, :min => 1, :max => 10 %>
-          </fieldset>
-          <fieldset class="label reviewComments" >
-            <h4><%= f.label :comments %></h4>
-            <%= f.text_area :review, size: "60x12" %>
-          </fieldset>
-          <fieldset id="submitReview">
-            <%= f.submit %>
-          </fieldset>
-        <% end %>
-      </div>
+    <% if @current_user.present?%>
+      <% if @current_user != @user %>
+        <h2><%= @user.first_name %>'s Reviews</h2>
+        <h4>Create a new review for <%= @user.first_name %> </h4>
+        <div class="chefReviews">
+          <%= form_for ([@user, Review.new]), remote: true, html: {multipart: true} do |f| %>
+          <div><strong>Ratings from 1 - 10:</strong>
+            <br> 1 = Bad Cooking, 10 = Masterchef!!</div>
+            <fieldset class="label reviewRating">
+              <h4><%= f.label :rating %> </h4>
+              <%= f.number_field :rating, :min => 1, :max => 10 %>
+            </fieldset>
+            <fieldset class="label reviewComments" >
+              <h4><%= f.label :comments %></h4>
+              <%= f.text_area :review, size: "60x12" %>
+            </fieldset>
+            <fieldset id="submitReview">
+              <%= f.submit %>
+            </fieldset>
+          <% end %>
+        </div>
+      <% end %>
     <% end %>
     </div>
 
@@ -135,8 +137,11 @@
                 <br>
                 <br>
                 <div class="light-orange">
+
                   Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
-                  <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+                    <% if @current_user == @user  %>
+                      <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
+                    <% end %>
                 </div>
               </div>
             <% end %>
