--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,12 +5,15 @@
   <% if @current_user == @user %>
     <h1>Hello <%= @user.first_name %></h1>
   <% elsif @user.chef?%>
-    <h1><%= @user.first_name %> <%= @user.last_name %></h1>
-  <% end %>
+<h1><%= @user.first_name %>
+  <%= @user.last_name %></h1>
+<% end %>
 
 <div class="chefBio">
-    <% if @user.chef? %>
-    <h3>" <%= @user.bio %> "</h3>
+  <% if @user.chef? %>
+  <h3>"
+    <%= @user.bio %>
+    "</h3>
   <% end %>
 </div>
 
@@ -18,134 +21,157 @@
 
 <div class="mainUsers">
 
-<div class="userProfilePic">
-  <%= image_tag @user.image, :class => "profilePic"%>
-</div>
+  <div class="userProfilePic">
+    <%= image_tag @user.image, :class => "profilePic"%>
+  </div>
 
-<div class="usersInfo">
+  <div class="usersInfo">
 
-<% #Title %>
+    <% #Title %>
     <% if @user.chef? %>
-      <h2>Chef <%= @user.last_name %></h2>
-    <% else %>
-      <h2>Host <%= @user.last_name %></h2>
+    <h2>Chef
+      <%= @user.last_name %></h2>
+  <% else %>
+    <h2>Host
+      <%= @user.last_name %></h2>
     <% end %>
 
-<% #Email %>
+    <% #Email %>
 
-<% if @user.chef? %>
-  <% if @user.average_rating.is_a? Numeric  %>
-    <h4>Rating:  <%= @user.average_rating %> / 10 </h4>
+    <% if @user.chef? %>
+    <% if @user.average_rating.is_a? Numeric  %>
+    <h4>Rating:
+      <%= @user.average_rating %>
+      / 10
+    </h4>
   <% else %>
     <h4><%=@user.average_rating%></h4>
-  <% end %>
-<% end %>
-
-    <p> <%= @user.email %></p>
-
-<% #only show the admin status if the current user is an admin %>
-    <% if @current_user.present? %>
-      <% if @current_user.admin? %>
-        <% if @user.admin? %>
-        <p><%= @user.first_name %> is also an admin</p>
-
-          <% end %>
-        <% end %>
-      <% end %>
-
-<% #only show the phone number if @user is a chef or current user is admin %>
-    <% if @user.chef? || @current_user.admin? %>
-      <p><strong>Phone:</strong><%= @user.phone %></p>
+    <% end %>
     <% end %>
 
-<% #show host or chef depending on @user.chef status %>
-      <% if @user.chef? %>
-        <p> <strong>User type: </strong> Chef </p>
-      <% elsif !@user.chef? %>
-        <p><strong>User type: </strong> Host </p>
-      <% end %>
+    <p>
+      <%= @user.email %></p>
 
-<% #only show the chef bio, rate, and menus if they are a chef %>
-      <% if @user.chef? %>
-        <p><strong>Rate:</strong><%= number_to_currency(@user.rate) %> per people</p>
-        <strong><%= link_to "Menus", menus_path %></strong>
-        <% @user.menus.each do |menu| %>
-          <li><%= link_to menu.title, menu %></li>
-        <% end %>
-      <% end %>
+    <% #only show the admin status if the current user is an admin %>
+    <% if @current_user.present? %>
+    <% if @current_user.admin? %>
+    <% if @user.admin? %>
+    <p><%= @user.first_name %>
+      is also an admin</p>
 
-<% #Add Menu Button %>
-<div class="return">
-      <% if @current_user.present? && (@user.id == @current_user.id || @current_user.admin?) %>
-        <%= link_to 'Add Menu', new_menu_path %> |
-      <% end %>
-      <% if @current_user.present? %>
-  <% #only show the edit button if the current user is @user or admin %>
-        <% if @current_user.admin? || @current_user.id === @user.id %>
-          <%= link_to 'Edit Profile', edit_user_path(@user) %>
-        <% end %>
-      <% end %>
-    </div>
+    <% end %>
+    <% end %>
+    <% end %>
+
+    <% #only show the phone number if @user is a chef or current user is admin %>
+    <% if @user.chef? || @current_user.admin? %>
+    <p>
+      <strong>Phone:</strong><%= @user.phone %></p>
+    <% end %>
+
+    <% #show host or chef depending on @user.chef status %>
+    <% if @user.chef? %>
+    <p>
+      <strong>User type:
+      </strong>
+      Chef
+    </p>
+    <% elsif !@user.chef? %>
+    <p>
+      <strong>User type:
+      </strong>
+      Host
+    </p>
+    <% end %>
+
+    <% #only show the chef bio, rate, and menus if they are a chef %>
+    <% if @user.chef? %>
+    <p>
+      <strong>Rate:</strong><%= number_to_currency(@user.rate) %>
+      per people</p>
+    <strong><%= link_to "Menus", menus_path %></strong>
+    <% @user.menus.each do |menu| %>
+  <li><%= link_to menu.title, menu %></li>
+  <% end %>
+  <% end %>
+
+  <% #Add Menu Button %>
+  <div class="return">
+    <% if @current_user.present? && (@user.id == @current_user.id || @current_user.admin?) %>
+    <%= link_to 'Add Menu', new_menu_path %>
+    |
+    <% end %>
+    <% if @current_user.present? %>
+    <% #only show the edit button if the current user is @user or admin %>
+    <% if @current_user.admin? || @current_user.id === @user.id %>
+    <%= link_to 'Edit Profile', edit_user_path(@user) %>
+    <% end %>
+    <% end %>
   </div>
 </div>
-
-
+</div>
 
 <div class="reviews">
-    <div class="reviewsContainer">
-    <% if @current_user.present?%>
-      <% if @current_user != @user %>
-        <h2><%= @user.first_name %>'s Reviews</h2>
-        <h4>Create a new review for <%= @user.first_name %> </h4>
-        <div class="chefReviews">
-          <%= form_for ([@user, Review.new]), remote: true, html: {multipart: true} do |f| %>
-          <div><strong>Ratings from 1 - 10:</strong>
-            <br> 1 = Bad Cooking, 10 = Masterchef!!</div>
-            <fieldset class="label reviewRating">
-              <h4><%= f.label :rating %> </h4>
-              <%= f.number_field :rating, :min => 1, :max => 10 %>
-            </fieldset>
-            <fieldset class="label reviewComments" >
-              <h4><%= f.label :comments %></h4>
-              <%= f.text_area :review, size: "60x12" %>
-            </fieldset>
-            <fieldset id="submitReview">
-              <%= f.submit %>
-            </fieldset>
-          <% end %>
-        </div>
-      <% end %>
+<div class="reviewsContainer">
+  <% if @current_user.present?%>
+  <% if @current_user != @user %>
+  <h2><%= @user.first_name %>'s Reviews</h2>
+  <h4>Create a new review for
+    <%= @user.first_name %>
+  </h4>
+  <div class="chefReviews">
+    <%= form_for ([@user, Review.new]), remote: true, html: {multipart: true} do |f| %>
+    <div>
+      <strong>Ratings from 1 - 10:</strong>
+      <br>
+      1 = Bad Cooking, 10 = Masterchef!!</div>
+    <fieldset class="label reviewRating">
+      <h4><%= f.label :rating %>
+      </h4>
+      <%= f.number_field :rating, :min => 1, :max => 10 %>
+    </fieldset>
+    <fieldset class="label reviewComments">
+      <h4><%= f.label :comments %></h4>
+      <%= f.text_area :review, size: "60x12" %>
+    </fieldset>
+    <fieldset id="submitReview">
+      <%= f.submit %>
+    </fieldset>
     <% end %>
-    </div>
+  </div>
+  <% end %>
+  <% end %>
+</div>
 
+<div class="showReviews">
+  <% if @current_user == @user %>
+  <h2>Your Previous Reviews</h2>
+<% else %>
+  <h2><%= @user.first_name %>'s Reviews</h2>
+  <% end %>
+  <% if !@user.reviews.present? %>
+  <h4>Currently No reviews</h4>
+<% else %>
+  <div class="overflowScrool">
+    <h2 id="prevReviews"></h2>
+    <% @user.reviews.reverse.each do |review| %>
+    <div class="individual_reviews">
+      <span class="rating"><%= review.rating %>
+        / 10 :</span>
+      <span class="review_comments"><%= review.review %></span>
+      <br>
+      <br>
+      <div class="light-orange">
 
-      <div class="showReviews">
-        <% if @current_user == @user %>
-          <h2>Your Previous Reviews</h2>
-        <% else %>
-          <h2><%= @user.first_name %>'s Reviews</h2>
+        Review by:
+        <%= link_to review.reviewer.first_name, review.reviewer %>
+        <% if @current_user == @user  %>
+        <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
         <% end %>
-        <% if !@user.reviews.present? %>
-            <h4>Currently No reviews</h4>
-        <% else %>
-          <div class="overflowScrool">
-            <h2 id="prevReviews"></h2>
-            <% @user.reviews.reverse.each do |review| %>
-              <div class="individual_reviews">
-                <span class="rating"><%= review.rating %> / 10 :</span>
-                <span class="review_comments"><%= review.review %></span>
-                <br>
-                <br>
-                <div class="light-orange">
-
-                  Review by: <%= link_to review.reviewer.first_name, review.reviewer %>
-                    <% if @current_user == @user  %>
-                      <%= link_to 'Delete', user_review_path(@user, review), method: :delete, data: { confirm: 'Are you sure sure you want to delete this review?' } %>
-                    <% end %>
-                </div>
-              </div>
-            <% end %>
-        </div>
-      <% end %>
+      </div>
     </div>
+    <% end %>
+  </div>
+  <% end %>
+</div>
 </div>
