--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
               <li><%= link_to "Menus", menus_path%></li>
               <% if @current_user.present? %>
               <li><%= link_to "Events", events_path%></li>
-              <li><%= link_to "Messages", messages_path%></li>
+              <li><%= link_to "Messages", messages_path, :class => 'message_link'%></li>
 
               <li>
                 <a href="/users/<%=@current_user.id%>">Profile</a>
