--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -5,7 +5,10 @@
 
 .newEvent {
   width: 40%;
-  margin-left: 38%;
+  margin-left: 28%;
+  text-align: left;
+  padding: 60px;
+  background-color: whitesmoke;
   text-align: left;
 
   h1 {
