--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,6 +1,6 @@
 
 
-  <div class="newEvent main">
+  <div class="newEvent">
     <h1>New Event</h1>
     <%= render 'form' %>
     <%= link_to 'Back', events_path %>
