--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -58,8 +58,14 @@
 
 <% if @current_user.id === @event.user_id %>
 <hr>
+  <% if @event.confirm === true %>
+  <%= link_to 'Back', events_path %>
+<% elsif @event.confirm === false %>
+<%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% elsif @event.confirm === nil %>
 <%= link_to 'Delete', @event, method: :delete, data: { confirm: 'Are you sure?' } %> |
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+<% end %>
 <% end %>
 </div>
