--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -34,7 +34,7 @@
   color: red !important;
 }
 
-#message-content {
+#message-content, #profile-message-content {
   height: 6em;
   width: 100%;
 }
