--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -112,3 +112,9 @@ div {
   background-color: whitesmoke;
   text-align: center;
 }
+
+h1{
+  color: #beeeef;
+  text-shadow: 2px 2px 5px black;
+  margin-bottom: 40px;
+}
