--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -13,10 +13,18 @@
   background-color: #beeeef;
   padding: 2% 10% 2% 10%;
   text-align: left;
+  h2{
+    color: white;
+    text-shadow: 2px 2px 5px black;
+  }
+  a:hover{
+    color:black;
+  }
 }
 
 .reviewsContainer {
   display: inline-block;
+  margin-right: 50px;
 }
 
 .overflowScrool{
@@ -28,7 +36,7 @@
 .showReviews{
   display: inline-block;
   vertical-align: top;
-  width: 30%;
+  width: 50%;
 }
 
 
