--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-  <div class="about">
+  <div class="about" id="about">
     <div class="row">
       <div class="col-md-4">
         <h3>Create an Event</h3>
